--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,329 @@
 *::after,
 *::before,
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
+  background-color: rgba(0, 0, 0, 0.1);
+  font-family: system-ui;
 }
 
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
 
+.links-container {
+  display: flex;
+  justify-content: center;
+}
+
+.redes {
+  color: #000;
+}
+
+.redes-list {
+  display: flex;
+  gap: 2rem;
+  align-items: flex-end;
+  font-size: 5rem;
+}
+
+.logo {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo img {
+  width: 30%;
+}
+
+.redes-container {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  height: 100px;
+}
+
+@media (max-width: 769px) {
+  .links-container {
+    margin-bottom: 1rem;
+    padding: 1rem 2rem;
+  }
+  .logo img {
+    width: 50%;
+  }
+}
+@media (max-width: 481px) {
+  .links-container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .logo img {
+    width: 70%;
+  }
+}
+.character:nth-of-type(1) {
+  grid-column: span 3;
+}
+
+.character:nth-of-type(2) {
+  grid-column: span 3;
+}
+
+.character:nth-of-type(3) {
+  grid-column: span 3;
+}
+
+.character:nth-of-type(4) {
+  grid-column: span 3;
+}
+
+.character:nth-of-type(5) {
+  grid-column: span 3;
+}
+
+.character:nth-of-type(6) {
+  grid-column: span 3;
+}
+
+.character:nth-of-type(7) {
+  grid-column: span 3;
+}
+
+.character:nth-of-type(8) {
+  grid-column: span 3;
+}
+
+.character:nth-of-type(9) {
+  grid-column: span 3;
+}
+
+.character:nth-of-type(10) {
+  grid-column: span 3;
+}
+
+.character:nth-of-type(11) {
+  grid-column: span 3;
+}
+
+.character:nth-of-type(12) {
+  grid-column: span 3;
+}
+
+.character:nth-of-type(13) {
+  grid-column: span 3;
+}
+
+.character:nth-of-type(14) {
+  grid-column: span 3;
+}
+
+.character:nth-of-type(15) {
+  grid-column: span 3;
+}
+
+.character:nth-of-type(16) {
+  grid-column: span 3;
+}
+
+.character:nth-of-type(17) {
+  grid-column: span 3;
+}
+
+.character:nth-of-type(18) {
+  grid-column: span 3;
+}
+
+.character:nth-of-type(19) {
+  grid-column: span 3;
+}
+
+.character:nth-of-type(20) {
+  grid-column: span 3;
+}
+
+.character {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  background-color: #fff;
+  padding: 0.8rem;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.5s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+.character-img {
+  max-width: 75%;
+  border-radius: 50%;
+}
+.character-label {
+  background-color: rgba(0, 0, 0, 0.6);
+  padding: 1rem;
+  color: #fff;
+  border-radius: 10px;
+  font-size: 1.6em;
+  text-align: center;
+  /* display: inline-flex; */
+}
+.character:hover {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.24);
+}
+
+.border-label {
+  margin-top: 1rem;
+}
+
+#personajes-container {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  gap: 2rem;
+  margin-bottom: 1rem;
+}
+
+@media (max-width: 769px) {
+  #personajes-container {
+    grid-template-columns: repeat(9, 1fr);
+    gap: 2rem;
+    padding: 1.5rem;
+    padding: 1.5rem;
+  }
+  .character:nth-of-type(1) {
+    grid-column: span 3;
+  }
+  .character:nth-of-type(2) {
+    grid-column: span 3;
+  }
+  .character:nth-of-type(3) {
+    grid-column: span 3;
+  }
+  .character:nth-of-type(4) {
+    grid-column: span 3;
+  }
+  .character:nth-of-type(5) {
+    grid-column: span 3;
+  }
+  .character:nth-of-type(6) {
+    grid-column: span 3;
+  }
+  .character:nth-of-type(7) {
+    grid-column: span 3;
+  }
+  .character:nth-of-type(8) {
+    grid-column: span 3;
+  }
+  .character:nth-of-type(9) {
+    grid-column: span 3;
+  }
+  .character:nth-of-type(10) {
+    grid-column: span 3;
+  }
+  .character:nth-of-type(11) {
+    grid-column: span 3;
+  }
+  .character:nth-of-type(12) {
+    grid-column: span 3;
+  }
+  .character:nth-of-type(13) {
+    grid-column: span 3;
+  }
+  .character:nth-of-type(14) {
+    grid-column: span 3;
+  }
+  .character:nth-of-type(15) {
+    grid-column: span 3;
+  }
+  .character:nth-of-type(16) {
+    grid-column: span 3;
+  }
+  .character:nth-of-type(17) {
+    grid-column: span 3;
+  }
+  .character:nth-of-type(18) {
+    grid-column: span 3;
+  }
+  .character:nth-of-type(19) {
+    grid-column: span 3;
+  }
+  .character:nth-of-type(20) {
+    grid-column: span 3;
+  }
+}
+@media (max-width: 480px) {
+  #personajes-container {
+    grid-template-columns: repeat(10, 1fr);
+    gap: 2rem;
+    padding: 1.5rem;
+  }
+  .character:nth-of-type(1) {
+    grid-column: span 5;
+  }
+  .character:nth-of-type(2) {
+    grid-column: span 5;
+  }
+  .character:nth-of-type(3) {
+    grid-column: span 5;
+  }
+  .character:nth-of-type(4) {
+    grid-column: span 5;
+  }
+  .character:nth-of-type(5) {
+    grid-column: span 5;
+  }
+  .character:nth-of-type(6) {
+    grid-column: span 5;
+  }
+  .character:nth-of-type(7) {
+    grid-column: span 5;
+  }
+  .character:nth-of-type(8) {
+    grid-column: span 5;
+  }
+  .character:nth-of-type(9) {
+    grid-column: span 5;
+  }
+  .character:nth-of-type(10) {
+    grid-column: span 5;
+  }
+  .character:nth-of-type(11) {
+    grid-column: span 5;
+  }
+  .character:nth-of-type(12) {
+    grid-column: span 5;
+  }
+  .character:nth-of-type(13) {
+    grid-column: span 5;
+  }
+  .character:nth-of-type(14) {
+    grid-column: span 5;
+  }
+  .character:nth-of-type(15) {
+    grid-column: span 5;
+  }
+  .character:nth-of-type(16) {
+    grid-column: span 5;
+  }
+  .character:nth-of-type(17) {
+    grid-column: span 5;
+  }
+  .character:nth-of-type(18) {
+    grid-column: span 5;
+  }
+  .character:nth-of-type(19) {
+    grid-column: span 5;
+  }
+  .character:nth-of-type(20) {
+    grid-column: span 5;
+  }
+}
+
+/*# sourceMappingURL=style.css.map */
