--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -45,6 +45,7 @@
     grid-template-rows: repeat(4, 1fr);
     gap: 2rem;
     margin-bottom: 1rem;
+    padding: 2rem;
 }
 
 @media (max-width:769px) {
